Fixes and updates
Quests and Events